--- a/step1-nginx/deployment.yml
+++ b/step1-nginx/deployment.yml
@@ -13,4 +13,17 @@ spec:
       - name: nginx
         image: nginx:1.17-alpine
         ports:
-        - containerPort: 80
+          - containerPort: 80
+
+        volumeMounts:
+        - mountPath: /etc/nginx/conf.d
+          name: nginx-conf
+          readOnly: true
+      
+      volumes:
+      - name: nginx-conf
+        configMap:
+          name: nginx-conf
+          items:
+            - key: nginx.conf
+              path: nginx.conf
