--- a/step2-mysql/deployment.yml
+++ b/step2-mysql/deployment.yml
@@ -19,8 +19,20 @@ spec:
       containers:
       - name: mysql-server
         image: mysql:5.7
+        args:
+          - "--ignore-db-dir=lost+found"
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: root
+        
         ports:
         - containerPort: 3306
+        
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
