step2: mysql usando secrets

--- a/step2-mysql/deployment.yml
+++ b/step2-mysql/deployment.yml
@@ -23,7 +23,10 @@ spec:
           - "--ignore-db-dir=lost+found"
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: root
+          valueFrom:
+            secretKeyRef:
+              name: mysql-pass
+              key: password
         
         ports:
         - containerPort: 3306
